recursion.lessons.recursion.dragoncurve.DragonCurve1.scala.error
DragonCurve1:3: error: '=' expected but ';' found.
	var v
^DragonCurve1:4: error: '=' expected but ';' found.
	if (order==1) {
^